# Udacitycppractice

./: .gitignore  CMakeLists.txt
course1-astarbasic/: astaronefile.cpp
course1-make-classes-files/: car.cpp  car.h  carmain.cpp  onefile.cpp
course1-unordere-map/: unordere-map-try.cpp
course2-classes-access/: class-access.cpp  class-constructor-outside.cpp  class-constructor.cpp
course2-friend-inheritance/: friend-inheritance.cpp
course2-inheritence/: inheritence-access-specifier.cpp  inheritence-access-specifier_2.cpp
course2-oop-getcstylesting/: mutator-cstystring.cpp
course3-RAII/: No_RAII_example.cpp  RAII_example.cpp
course3-copysemantics/: copysemantics.cpp  sol1-nocopyconsdtructor.cpp  sol2-exclusiveownership.cpp  sol3-deepcopypolicy.cpp  sol4-sharedownershipolicy.cpp
course3-lvalueandrvalue/: lvalueandrvalueex.cpp  lvaluereference.cpp  lvaluereference2.cpp  r_value_refernce_error.cpp  rvaluereference2.cpp
course3-mallocfunction-and-newoperator/: malloc_example.cpp  malloc_vs_new_with_OOP.cpp  newdeleteproblems.cpp  overloadingnewandfree.cpp  overloadingnewandfreearray.cpp  realloc_example.cpp  trybasic.cpp
course3-memorymanagement/: printfrommemory.cpp
course3-memoryproblems/: bufferoverrun.cpp  memory_leak.cpp
course3-movesemantics/: rule_of_five-new.cpp  rule_of_five.cpp  rule_of_five_moving.cpp  rule_of_five_moving_savecopywhencallbyvalue.cpp  rule_of_five_savefromcopywithlvaluetorvalueconv.cpp  rule_of_three.cpp  rvalue_example.cpp  rvalue_example2-move.cpp
course3-smartpointers/: convertpointers.cpp  passasharedptr.cpp  passuniqueptrwithmove.cpp  sharedpointer_example.cpp  uniquepinter_example.cpp  uniquepointer_basicexample.cpp  weakpointer_checkexpiredresource.cpp  weakpointer_example.cpp
datastructures/: binarysearchtree.cpp  queue.cpp  queue_concurrent.cpp  stack.cpp  valgrind-out.txt
make-classes-files/: car.cpp  car.h  carmain.cpp
multiple-files-project/: addone.cpp  addone.h  incrementandsum.cpp  main.cpp  (+1 more)
(+52 files in other folders)
