cmake_minimum_required(VERSION 3.15)
project(Udacitycppractice)

set(CMAKE_CXX_STANDARD 17)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)
find_package (Threads)

#add_executable(incrementsum course1-multiple-files-project/main.cpp course1-multiple-files-project/addone.cpp course1-multiple-files-project/incrementandsum.cpp)
#add_executable(unorderedmap course1-unordere-map/unordere-map-try.cpp)
#add_executable(carclass ./course1-make-classes-files/onefile.cpp)
#add_executable(carmultfiles course1-make-classes-files/car.cpp course1-make-classes-files/carmain.cpp)
#add_executable(searchtrees ./zothertopics/binarysearchtree.cpp)
#add_executable(searchmoretrees ./zothertopics/moretrees.cpp)
add_executable(trymultilambda course4-threads/1_intro_and_runningthreads/thread_try0_run_multiple-threads-lambda.cpp)
target_link_libraries (trymultilambda ${CMAKE_THREAD_LIBS_INIT})